kubernetes/mock-razorpay/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-razorpay
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-razorpay
  template:
    metadata:
      labels:
        app: mock-razorpay
    spec:
      containers:
        - name: mock-razorpay
          image: henryarrovin/mock-razorpay:latest
          ports:
            - containerPort: 8090
