kubernetes/mock-razorpay/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-razorpay-service
  namespace: auth
spec:
  selector:
    app: mock-razorpay
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: 8090
